@@ -588,7 +588,7 @@ function checkCommentsAllowed($id)
 
 function comments_help()
 {
-    return '<a id="txpCommentHelpLink" rel="external noopener" target="_blank" href="'.HELP_URL.'">'.gTxt('textile_help').'</a>';
+    return '<a id="txpCommentHelpLink" rel="external" target="_blank" href="'.HELP_URL.'">'.gTxt('textile_help').'</a>';
 }
 
 /**
