@@ -1371,7 +1371,7 @@ class Skin extends CommonBase implements SkinInterface
 
                 $tdAuthor = txpspecialchars($skin_author);
                 empty($skin_author_uri) or $tdAuthor = href($tdAuthor.sp.span(gTxt('opens_external_link'), array('class' => 'ui-icon ui-icon-extlink')), $skin_author_uri, array(
-                    'rel'    => 'external noopener',
+                    'rel'    => 'external',
                     'target' => '_blank',
                 ));
 
